--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,9 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   keyboard_actions: ^3.4.4
   fluttertoast: ^8.2.1
-  flutter_swipe_action_cell: ^3.1.0
+  flutter_swipe_action_cell: 2.2.3
   share_plus: ^2.1.4
-  in_app_review: ^2.0.3
+#  in_app_review: ^2.0.3
   rate_my_app: ^1.1.1
 #  local_auth: ^1.1.8
 
